@@ -1,8 +1,7 @@
 // SPDX-License-Identifier: GPL-2.0-or-later
 // Copyright The Music Player Daemon Project
 
-#ifndef DELETER_HXX
-#define DELETER_HXX
+#pragma once
 
 #include <mpd/client.h>
 
@@ -15,11 +14,7 @@ struct LibmpdclientDeleter {
 		mpd_output_free(o);
 	}
 
-#if LIBMPDCLIENT_CHECK_VERSION(2,17,0)
 	void operator()(struct mpd_partition *o) const noexcept {
 		mpd_partition_free(o);
 	}
-#endif
 };
-
-#endif
