@@ -18,18 +18,14 @@ static constexpr TagMask global_tag_whitelist{
 	MPD_TAG_ALBUM,
 	MPD_TAG_COMPOSER,
 	MPD_TAG_PERFORMER,
-#if LIBMPDCLIENT_CHECK_VERSION(2,17,0)
 	MPD_TAG_CONDUCTOR,
 	MPD_TAG_WORK,
-#endif
 	MPD_TAG_NAME,
 	MPD_TAG_DISC,
 	MPD_TAG_TRACK,
 	MPD_TAG_DATE,
 	MPD_TAG_GENRE,
-#if LIBMPDCLIENT_CHECK_VERSION(2,17,0)
 	MPD_TAG_LABEL,
-#endif
 	MPD_TAG_COMMENT,
 };
 
